Use latest version of django-angular

--- a/betatest/templates/betatest/application.html
+++ b/betatest/templates/betatest/application.html
@@ -11,7 +11,7 @@
 {% endblock css %}
 
 {% block head_js %}
-<script src="{% static "djangular/js/django-angular.min.js" %}"></script>
+<script src="{% static "djng/js/django-angular.min.js" %}"></script>
 {% endblock head_js %}
 
 {% block content %}
