Check password strength

--- a/betatest/templates/betatest/application.html
+++ b/betatest/templates/betatest/application.html
@@ -33,5 +33,6 @@
 {% endblock content %}
 
 {% block body_js %}
+<script src="{% static "external/js/zxcvbn.js" %}"></script>
 <script src="{% static "js/src/betatest.js" %}"></script>
 {% endblock body_js %}
