Include django-angular styles

--- a/betatest/templates/betatest/application.html
+++ b/betatest/templates/betatest/application.html
@@ -6,6 +6,7 @@
 
 {% block css %}
 {% compress css %}
+<link href="{% static "djng/css/djng.css" %}" type="text/css" rel="stylesheet"/>
 <link href="{% static "scss/betatest.scss" %}" type="text/x-scss" rel="stylesheet"/>
 {% endcompress %}
 {% endblock css %}
