--- a/registration/templates/registration/form_field.html
+++ b/registration/templates/registration/form_field.html
@@ -2,8 +2,8 @@
 <div class="page-content__inner__wrapper">
     <div class="page-content__inner__left">
         <div class="field field--host">
-            <label class="field-label field-label--required" for="{{ field.id_for_label }}">
-                {{ field.label }}
+            <label class="field-label{% if field.field.required %} field-label--required{% endif %}" for="{{ field.id_for_label }}">
+                {{ field.label }} {% if not field.field.required %}(optional){% endif %}
             </label>
             <div class="input--host__wrapper input--host__wrapper--{{ field.name }}">
                 {{ field }}
