--- a/registration/templates/registration/registration.html
+++ b/registration/templates/registration/registration.html
@@ -75,6 +75,7 @@
 
 {% block body_js %}
 <script src="{% static "djng/js/django-angular.min.js" %}"></script>
+<script src="https://checkout.stripe.com/checkout.js"></script>
 <script src="{% static "external/js/icheck.min.js" %}"></script>
 <script src="{% static "external/js/zxcvbn.js" %}"></script>
 <script src="{% static "js/src/registration.js" %}"></script>
