Move `js/src` to `js/<app_name>` to follow standard pattern

--- a/instance/templates/instance/index.html
+++ b/instance/templates/instance/index.html
@@ -43,8 +43,8 @@
 {% block body_js %}
 {% swampdragon_settings %}
 <script src="{% static 'swampdragon/js/dist/swampdragon.min.js' %}"></script>
-<script src="{% static "js/src/instance.js" %}"></script>
-<script src="{% static "js/src/openedx_appserver.js" %}"></script>
+<script src="{% static "js/instance/instance.js" %}"></script>
+<script src="{% static "js/instance/openedx_appserver.js" %}"></script>
 {% endblock body_js %}
 
 {% block footer %}{% endblock footer %}
