--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -17,5 +17,5 @@
 
 {% block body_js %}
 <script src="{% static "djng/js/django-angular.min.js" %}"></script>
-<script src="{% static "js/src/login.js" %}"></script>
+<script src="{% static "js/registration/login.js" %}"></script>
 {% endblock body_js %}
