--- a/registration/templates/registration/registration.html
+++ b/registration/templates/registration/registration.html
@@ -78,5 +78,5 @@
 <script src="https://checkout.stripe.com/checkout.js"></script>
 <script src="{% static "external/js/icheck.min.js" %}"></script>
 <script src="{% static "external/js/zxcvbn.js" %}"></script>
-<script src="{% static "js/src/registration.js" %}"></script>
+<script src="{% static "js/registration/registration.js" %}"></script>
 {% endblock body_js %}
