Rename `RegistrationApp` to `OpenCraftApp` to allow sharing
...between Django apps. Angular only supports one app within a given
HTML subtree, so it isn't possible to stack them. `OpenCraftApp` is
meant to become the single application used accross the OpenCraft IM
project, with separate apps implementing different controlers.

--- a/registration/templates/registration/registration.html
+++ b/registration/templates/registration/registration.html
@@ -15,7 +15,7 @@
     </p>
 </div>
 
-<div class="row small-collapse page-content clearfix" ng-app="RegistrationApp">
+<div class="row small-collapse page-content clearfix" ng-app="OpenCraftApp">
     <div class="page-content__inner small-12 medium-10 medium-offset-1 columns background-white">
         {% with application=form.instance %}
 
