--- a/registration/templates/registration/registration.html
+++ b/registration/templates/registration/registration.html
@@ -79,4 +79,5 @@
 <script src="{% static "external/js/icheck.min.js" %}"></script>
 <script src="{% static "external/js/zxcvbn.js" %}"></script>
 <script src="{% static "js/registration/registration.js" %}"></script>
+<script src="{% static "js/billing/billing.js" %}"></script>
 {% endblock body_js %}
